--- a/package.json
+++ b/package.json
@@ -110,7 +110,9 @@
     "mocha": "^3.0.2",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
+    "node-sass": "^4.7.2",
     "require-dir": "^0.3.0",
+    "sass-loader": "^6.0.6",
     "spectron": "^3.7.1",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
