--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postinstall": "npm run lint:fix"
   },
   "build": {
+    "asar": false,
     "productName": "InstagramBotGUI.js",
     "appId": "io.ptkdev.instagrambotjs",
     "directories": {
@@ -56,7 +57,7 @@
     }
   },
   "dependencies": {
-    "instagrambotlib": "file:./instagram-bot-lib",
+    "instagrambotlib": "^0.6.1",
     "material-components-web": "^0.31.0",
     "material-design-icons-iconfont": "^3.0.3",
     "rxjs": "^5.5.6",
